cmake_minimum_required(VERSION 3.28)
project(CPP_Learning)

set(CMAKE_CXX_STANDARD 14)

add_executable(assignment01 assignment01.cpp)
add_executable(assignment02 assignment02.cpp)
add_executable(assignment03 assignment03.cpp)
add_executable(assignment04 assignment04.cpp)
add_executable(assignment05 assignment05.cpp)
add_executable(assignment06 assignment06.cpp)